caproto/v1.0.0/_sources/generated/caproto.server.records.WaveformFields.rst.txt
caproto.server.records.WaveformFields
=====================================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: WaveformFields

.. autoclass:: WaveformFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="waveform"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: WaveformFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - PvpropertyChar 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - busy_indicator
           - ``BUSY``
           - Busy Indicator
           - PvpropertyShortRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - PvpropertyChar 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - display_precision
           - ``PREC``
           - Display Precision
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
                 **Get**
                 **Put**
           - 
    
        *  - engineering_units
           - ``EGU``
           - Engineering Units
           - PvpropertyChar 
           - 
                 Length(16)
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - PvpropertyChar 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - field_type_of_value
           - ``FTVL``
           - Field Type of Value
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - hash_of_onchange_data
           - ``HASH``
           - Hash of OnChange data.
           - PvpropertyInteger 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - high_operating_range
           - ``HOPR``
           - High Operating Range
           - PvpropertyDouble 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
                 **Get**
                 **Put**
           - 
    
        *  - input_specification
           - ``INP``
           - Input Specification
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - low_operating_range
           - ``LOPR``
           - Low Operating Range
           - PvpropertyDouble 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
                 **Get**
                 **Put**
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - number_elements_read
           - ``NORD``
           - Number elements read
           - PvpropertyIntegerRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - number_of_elements
           - ``NELM``
           - Number of Elements
           - PvpropertyIntegerRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
                 **Get**
           - 
    
        *  - post_archive_monitors
           - ``APST``
           - Post Archive Monitors
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - post_value_monitors
           - ``MPST``
           - Post Value Monitors
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - prev_simulation_mode
           - ``OLDSIMM``
           - Prev. Simulation Mode
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - rearm_the_waveform
           - ``RARM``
           - Rearm the waveform
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - PvpropertyCharRO 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - PvpropertyStringRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - sim_mode_async_delay
           - ``SDLY``
           - Sim. Mode Async Delay
           - PvpropertyDouble 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - sim_mode_scan
           - ``SSCN``
           - Sim. Mode Scan
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - simulation_input_link
           - ``SIOL``
           - Simulation Input Link
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - simulation_mode
           - ``SIMM``
           - Simulation Mode
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - simulation_mode_link
           - ``SIML``
           - Simulation Mode Link
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - simulation_mode_severity
           - ``SIMS``
           - Simulation Mode Severity
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.WaveformFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~WaveformFields.group_read
       ~WaveformFields.group_write
       ~WaveformFields.publish
       ~WaveformFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~WaveformFields.default_values
       ~WaveformFields.has_val_field
       ~WaveformFields.scan_rate_sec
       ~WaveformFields.type_map
       ~WaveformFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: display_precision.getter(self, instance)
        

    
    .. literalinclude:: /../../../../caproto/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 41
        :lines: 41-43
    .. method:: high_operating_range.getter(self, instance)
        

    
    .. literalinclude:: /../../../../caproto/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 41
        :lines: 41-43
    .. method:: low_operating_range.getter(self, instance)
        

    
    .. literalinclude:: /../../../../caproto/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 41
        :lines: 41-43
    .. method:: number_of_elements.getter(self, instance)
        

    
    .. literalinclude:: /../../../../caproto/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 41
        :lines: 41-43